CHATS_SIT/force-app/main/default/objects/T_PRIM_ACTV_CNTR__c.object
<CustomObject>
    <description>Individual Activity and training</description>
    <fields>
        <fullName>CDE_TYPE__c</fullName>
        <formula>CASE( IDN_PRIM_ACTV__r.CDE_TYPE_ACTV__c, &quot;GED&quot;, &quot;GED/ESL/ABE&quot;, &quot;JS&quot;, &quot;Job Search&quot;, &quot;POS&quot;,&quot;Post-Secondary Education / Job Skills&quot;, &quot;SUD&quot;,&quot;Substance Use Disorder&quot;,&quot;&quot;)</formula>
        <label>Counter Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNT_WEEKS__c</fullName>
        <label>Weeks Used</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Primary Activity Counter</relationshipLabel>
        <relationshipName>Primary_Activity_Counter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_PRIM_ACTV__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Activity ID</label>
        <referenceTo>T_PRIM_ACTV__c</referenceTo>
        <relationshipLabel>Primary Activity Counter</relationshipLabel>
        <relationshipName>Primary_Activity_Counter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAST_UPTD_DATE_BATCH__c</fullName>
        <label>Counter Last updated Date by Batch</label>
        <type>Date</type>
    </fields>
    <label>Primary Activity Counter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Primary Activity Counter ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Primary Activity Counter</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Weeks_Used_Cant_be_0</fullName>
        <active>true</active>
        <errorConditionFormula>CNT_WEEKS__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>CNT_WEEKS__c</errorDisplayField>
        <errorMessage>Field is required and must be greater than or equal to 0</errorMessage>
    </validationRules>
</CustomObject>